--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-popover": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-tabs": "^1.0.5",
+    "@sentry/react": "^10.28.0",
     "@supabase/supabase-js": "^2.38.4",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
