chore: Update Vercel config for SPA routing and add deployment guide

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
   "headers": [
     {
       "source": "/sitemap.xml",
@@ -21,8 +24,8 @@
   ],
   "rewrites": [
     {
-      "source": "/sitemap.xml",
-      "destination": "/sitemap.xml"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
