feat: Implement automatic country-based language detection and translation coverage tests
- Created countryLanguageMap.js with comprehensive country-to-language mapping
- Implemented languageDetection.js with priority: user profile > localStorage > delivery country > browser locale > fallback
- Added user override flag to prevent auto-detection after manual selection
- Updated LanguageContext to use new detection logic on app initialization
- Created checkTranslations.js script to verify all languages have all keys
- Added translation check to build process (npm run build now checks translations)
- Script detects missing keys and empty values, fails build if found

Translation coverage status:
- EN: ✅ Complete (613 keys)
- FR: ⚠️ Missing 90 keys
- AR: ⚠️ Missing 84 keys
- PT: ⚠️ Missing 154 keys

Build will fail until all translations are complete.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run check-translations && vite build",
     "preview": "vite preview",
+    "check-translations": "node scripts/checkTranslations.js",
     "verify-migration": "node scripts/automated-verification.js",
     "verify": "node scripts/automated-verification.js",
     "check-all": "node scripts/complete-all-automation.js",
