revert: Remove all language detection and translation coverage changes
- Reverted LanguageContext.jsx to simple version
- Reverted Navbar.jsx to state before language detection
- Removed resolveLanguage.js, countryLanguageMap.js, languageDetection.js
- Removed translation check script
- Removed translation check from build process
- Removed documentation file

Language system is now back to simple localStorage-based selection.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run check-translations && vite build",
+    "build": "vite build",
     "preview": "vite preview",
-    "check-translations": "node scripts/checkTranslations.js",
     "verify-migration": "node scripts/automated-verification.js",
     "verify": "node scripts/automated-verification.js",
     "check-all": "node scripts/complete-all-automation.js",
