--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^12.23.24",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.5.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.0",
     "recharts": "^2.10.3",
