--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postcss": "^8.4.32",
     "sharp": "^0.34.5",
     "tailwindcss": "^3.3.6",
+    "vercel": "^50.1.2",
     "vite": "^5.0.8"
   }
 }
