--- a/vercel.json
+++ b/vercel.json
@@ -30,7 +30,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(js|css|woff|woff2|ttf|eot|svg|png|jpg|jpeg|gif|webp|ico))",
+      "source": "/(.*\\.(js|css|woff|woff2|ttf|eot|svg|png|jpg|jpeg|gif|webp|ico))$",
       "headers": [
         {
           "key": "Cache-Control",
