TOTAL CODE PURGE & REDIRECT STABILIZATION
- Remove ghost variables: Verified isSynchronizing removed from source code
- Aggressive extension error suppression: Added filters for 'Unchecked runtime.lastError', 'message channel closed', 'extensionAdapter.sendMessageToTab', and 'Cannot read properties of null (reading "indexOf")'
- Re-lock redirect law: PostLoginRouter now uses capabilities.ready as ONLY gate, removed authReady dependency, wrapped navigate in 100ms timeout
- Cache headers purge: Added no-store, max-age=0 headers to vercel.json for all routes to prevent stale bundle caching

Fixes production crashes from extension errors and redirect stalling during token refresh.

--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "no-cache, no-store, must-revalidate"
+          "value": "no-store, max-age=0"
         },
         {
           "key": "Pragma",
@@ -17,6 +17,15 @@
         {
           "key": "Expires",
           "value": "0"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-store, max-age=0"
         }
       ]
     },
