🔒 Kernel Backend Final Alignment: Security Hardening & RLS Policy Updates
- Added SET search_path = public to current_company_id() and is_admin() functions for security hardening
- Fixed RLS policies for shipment_tracking_events (removed non-existent logistics_partner_id column)
- Fixed testimonials and partner_logos policies (conditional published column check)
- Fixed platform_revenue policy (moved COMMENT inside conditional block)
- Updated migrations to handle missing tables gracefully
- All policies now use Kernel-compliant patterns (current_company_id() + is_admin())
- 100% Kernel Manifesto compliance achieved for verified tables

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test-all": "node scripts/test-rfq-comprehensive.js",
     "smoke-tests": "node scripts/smoke-tests-automated.js",
     "check-deploy": "node scripts/prepare-deployment.js",
-    "verify-metadata": "node scripts/verify-metadata-migration.js"
+    "verify-metadata": "node scripts/verify-metadata-migration.js",
+    "verify-backend": "node scripts/verify-backend-via-api.js",
+    "verify-backend-compliance": "node scripts/verify-backend-kernel-compliance.js"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
