--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-tabs": "^1.0.5",
     "@sentry/react": "^10.28.0",
     "@supabase/supabase-js": "^2.38.4",
+    "canvas-confetti": "^1.9.4",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^12.23.24",
