--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-router-dom": "^6.20.0",
     "recharts": "^2.10.3",
     "sonner": "^1.2.0",
-    "tailwind-merge": "^2.1.0"
+    "tailwind-merge": "^2.1.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
