fix(dashboard): resolve infinite loading and 400 errors feat(ai): modernize UI to 2026 aesthetic and optimize latency fix(ai): implement robust JSON parsing fallback for responses

--- a/.env.example
+++ b/.env.example
@@ -13,18 +13,25 @@ VITE_SUPABASE_ANON_KEY=your-anon-key-here
 # ============================================
 # SMILE ID VERIFICATION (KYC/KYB)
 # ============================================
-# Get your credentials at https://portal.smileidentity.com
-VITE_SMILE_ID_API_URL=https://api.smileidentity.com/v1
-VITE_SMILE_ID_PARTNER_ID=your-partner-id
-VITE_SMILE_ID_API_KEY=your-api-key
-VITE_SMILE_ID_CALLBACK_URL=https://your-supabase-url.supabase.co/functions/v1/smile-id-webhook
+# ⚠️ DISABLED FOR MVP - Not required for initial launch
+# When needed, configure in Supabase Edge Function secrets instead
+# (SMILE_ID_PARTNER_ID, SMILE_ID_API_KEY)
 
 # ============================================
 # OPENAI API (for KoniAI+)
 # ============================================
-# Get your API key at https://platform.openai.com
-# Note: This is set in Supabase Edge Function secrets, not in frontend
-# OPENAI_API_KEY=sk-your-openai-api-key
+# ✅ MIGRATED TO GOOGLE GEMINI
+# Configured in Supabase Edge Function secrets (GEMINI_API_KEY)
+
+# ============================================
+# GOOGLE GEMINI API (for KoniAI Chat)
+# ============================================
+# ✅ Configured in Supabase Edge Function secrets
+# No need to add here - handled server-side for security
+# ============================================
+# Get your API key at https://aistudio.google.com/app/apikey
+# This is used by the 'koniai-chat' Edge Function
+# GEMINI_API_KEY=your-gemini-api-key
 
 # ============================================
 # PAYMENT PROVIDERS
@@ -63,6 +70,7 @@ VITE_DEBUG_MODE=false
 # These must be set in Supabase Dashboard > Settings > Edge Functions
 #
 # Required secrets for edge functions:
+# - GEMINI_API_KEY: ⚠️ REQUIRED for AI Copilot (KoniAI Chat)
 # - OPENAI_API_KEY: Your OpenAI API key for KoniAI+ features
 # - SMILE_ID_API_KEY: Your Smile ID API key for verification webhook
 # - SUPABASE_SERVICE_ROLE_KEY: Auto-available in edge functions
