--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^12.23.24",
+    "heic2any": "^0.0.4",
     "i18next": "^25.7.3",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide": "^0.562.0",
