--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@radix-ui/react-tabs": "^1.0.5",
     "@sentry/react": "^10.28.0",
     "@supabase/supabase-js": "^2.38.4",
+    "@tanstack/query-sync-storage-persister": "^5.90.22",
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-query-devtools": "^5.91.3",
+    "@tanstack/react-query-persist-client": "^5.90.22",
     "canvas-confetti": "^1.9.4",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
