--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^12.23.24",
     "heic2any": "^0.0.4",
+    "html2canvas": "^1.4.1",
     "i18next": "^25.7.3",
     "i18next-browser-languagedetector": "^8.2.0",
+    "jspdf": "^4.1.0",
     "lucide": "^0.562.0",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
