feat: performance & mobile optimization - fixed 20s load delay & dashboard UI overlaps

--- a/.env.example
+++ b/.env.example
@@ -45,8 +45,15 @@ VITE_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
 # ============================================
 # ANALYTICS & MONITORING
 # ============================================
-# Sentry for error tracking
-VITE_SENTRY_DSN=your-sentry-dsn
+# Sentry - Error tracking and performance monitoring
+# Get your DSN from: https://sentry.io/settings/YOUR_ORG/projects/YOUR_PROJECT/keys/
+# See docs/MONITORING_SETUP.md for full setup guide
+VITE_SENTRY_DSN=https://your-key@o123456.ingest.sentry.io/7654321
+
+# Google Analytics 4 - User behavior analytics
+# Get your measurement ID from: https://analytics.google.com/analytics/web
+# Format: G-XXXXXXXXXX
+VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 
 # Google Analytics
 VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
