--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@ VITE_STORAGE_SECRET=afrikoni_secure_storage_key_2026_production_v1
 VITE_FLUTTERWAVE_PUBLIC_KEY=FLWPUBK_TEST-619df9badd04f806cc72f0691185570b-X
 VITE_FLUTTERWAVE_SECRET_KEY=FLWSECK_TEST-REPLACEME
 VITE_FLUTTERWAVE_ENCRYPTION_KEY=FLWSECK_TEST-REPLACEME
+
+# Email Service (Resend) - for local diagnostics only
+# ✅ Production uses Supabase Edge Function secrets
+RESEND_API_KEY=re_YhqHC3Hj_Hx6bzsAvkg2dNAQiE14ZfBQe
